addition to index in game

--- a/game/index.html
+++ b/game/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
+    <head>
 <title>Dig Dug</title>
-
-
+    </head>
+<body>
 Publishing Info
 
 Published by: Atari, Inc.
@@ -32,4 +33,5 @@ Quote
 Source
 
 https://www.mobygames.com/game/arcade/dig-dug
+</body>
 </html>
