--- a/game/index.html
+++ b/game/index.html
@@ -2,35 +2,51 @@
 
     <head>
 <title>Dig Dug</title>
+
+<style>
+    h1 { 
+        color:red;
+        font-family: sans-serif;
+        border-bottom: 1px solid blue;
+        }
+    blockquote { 
+        background-color: lightgray;
+        padding: 1rem;
+        }
+</style>
     </head>
+
 <body>
-Publishing Info
+    <h1>Dig Dug</h1>
+    <img src = "dig-dug-burnt.png" alt = "dig dug example photo">
+<h2>Publishing Info</h2>
 
-Published by: Atari, Inc.
-Developed by: Namco Limited
-Released: Apr, 1982
+<h4>
+Published by: Atari, Inc.<br>
+Developed by: Namco Limited<br>
+Released: Apr, 1982<br>
+</h4>
 
-
-Description
-
+<h2>Description</h2>
+<p>
 Dig Dug is a 1-2 player arcade game in which you have to use your shovel to dig your way through the earth. Stopping you from doing this are two monsters, called Pooka and Fygar, who will continually chase you around. The only weapon that you carry is an air pump, which you can use to inflate the monsters to the point where they explode. [...]
+</p>
+
+<h2>Game Categories</h2>
+
+Genre: Action<br>
+Perspective: Side view<br>
+Visual: Fixed<br>
+Gameplay: Arcade<br>
 
 
-Game Categories
+<h2>Quote</h2>
 
-Genre: Action
-Perspective: Side view
-Visual: Fixed
-Gameplay: Arcade
+	<blockquote> definitely goes under the heading of "Games That Were Made While a Programmer Was on Drugs," or at least had a good imagination. And maybe they were into horror movies too.
+		-- https://www.mobygames.com/mobyrank/source/sourceId,540/ </blockquote>
 
 
-Quote
-
-	This definitely goes under the heading of "Games That Were Made While a Programmer Was on Drugs," or at least had a good imagination. And maybe they were into horror movies too.
-		-- https://www.mobygames.com/mobyrank/source/sourceId,540/
-
-
-Source
+<h2>Source</h2>
 
 https://www.mobygames.com/game/arcade/dig-dug
 </body>
