--- a/game/index.html
+++ b/game/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html lang = html>
+<!DOCTYPE html>
 
     <head>
 <title>Dig Dug</title>
@@ -17,28 +17,42 @@
     </head>
 
 <body>
+    <header>
+        <img src = "dig-dug-logo.png" alt = "dig dug logo">
     <h1>Dig Dug</h1>
     <img src = "dig-dug-burnt.png" alt = "dig dug example photo">
+    <hr>
+</header>
+<main>
 <h2>Publishing Info</h2>
 
-<h4>
-Published by: Atari, Inc.<br>
-Developed by: Namco Limited<br>
-Released: Apr, 1982<br>
-</h4>
+<ul>
+<li>Published by: Atari, Inc.<br></li>
+<li>Developed by: <abbr title = "Nakamura Manufacturing Company">Namco</abbr> Limited<br></li>
+<li>Released: Apr, 1982<br></li>
+</ul>
+
+<hr>
 
 <h2>Description</h2>
 <p>
-Dig Dug is a 1-2 player arcade game in which you have to use your shovel to dig your way through the earth. Stopping you from doing this are two monsters, called Pooka and Fygar, who will continually chase you around. The only weapon that you carry is an air pump, which you can use to inflate the monsters to the point where they explode. [...]
+Dig Dug is a 1-2 player arcade game in which you have to use your shovel to dig your way through the <br>
+earth. Stopping you from doing this are two monsters, called <em>Pooka</em> and <em>Fygar</em>, who will continually chase <br>
+ you around. The only weapon that you carry is an air pump, which you can use to inflate the monsters to <br>
+the point where they <strong>explode</strong>. [...]
 </p>
+<img src = "fygar_inflate.png" alt = "fygar being inflated">
+
+<hr>
 
 <h2>Game Categories</h2>
-
-Genre: Action<br>
-Perspective: Side view<br>
-Visual: Fixed<br>
-Gameplay: Arcade<br>
-
+<ul>
+<li>Genre: Action<br></li>
+<li>Perspective: Side view<br></li>
+<li>Visual: Fixed<br></li>
+<li>Gameplay: Arcade<br></li>
+</ul>
+<hr>
 
 <h2>Quote</h2>
 
@@ -46,8 +60,12 @@ Gameplay: Arcade<br>
 		-- https://www.mobygames.com/mobyrank/source/sourceId,540/ </blockquote>
 
 
-<h2>Source</h2>
+<hr>
+</main>
+<footer>
+<h3>Source</h3>
 
-https://www.mobygames.com/game/arcade/dig-dug
+<div id = "source">https://www.mobygames.com/game/arcade/dig-dug</div>
+</footer>
 </body>
 </html>
