--- a/game/index.html
+++ b/game/index.html
@@ -3,6 +3,9 @@
     <head>
 <title>Dig Dug</title>
 
+<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
 <style>
     h1 { 
         color:red;
@@ -13,12 +16,13 @@
         background-color: lightgray;
         padding: 1rem;
         }
+    
 </style>
     </head>
 
 <body>
     <header>
-        <img src = "dig-dug-logo.png" alt = "dig dug logo">
+        <pre style="background-color:lightblue;">                                                                                                                                                                                                                                                                                                                                      <img src = "dig-dug.svg" alt = "dig dug logo" width = "178" height="54"></pre>
     <h1>Dig Dug</h1>
     <img src = "dig-dug-burnt.png" alt = "dig dug example photo">
     <hr>
@@ -66,6 +70,7 @@ the point where they <strong>explode</strong>. [...]
 <h3>Source</h3>
 
 <div id = "source">https://www.mobygames.com/game/arcade/dig-dug</div>
+<hr>
 </footer>
 </body>
 </html>
