work on starting style sheets exercise

--- a/game/index.html
+++ b/game/index.html
@@ -12,17 +12,30 @@
         font-family: sans-serif;
         border-bottom: 1px solid blue;
         }
+    h2 {
+        color:burlywood;
+    }
     blockquote { 
         background-color: lightgray;
         padding: 1rem;
         }
+    body {
+        background-color: lightblue;
+    }
+    p {
+        margin-left: 100px;
+    }
+    img.side {
+        float:right;
+        margin: 0 12px;
+    }
     
 </style>
     </head>
 
 <body>
     <header>
-        <pre style="background-color:lightblue;">                                                                                                                                                                                                                                                                                                                                      <img src = "dig-dug.svg" alt = "dig dug logo" width = "178" height="54"></pre>
+    <img class = "side" src = "dig-dug.svg" alt = "dig dug logo" width = "178" height="54">
     <h1>Dig Dug</h1>
     <img src = "dig-dug-burnt.png" alt = "dig dug example photo">
     <hr>
