reorganizing of dig dug page as per links exercise

--- a/game/index.html
+++ b/game/index.html
@@ -3,8 +3,8 @@
     <head>
 <title>Dig Dug</title>
 
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
 
 <style>
     h1 { 
@@ -13,7 +13,7 @@
         border-bottom: 1px solid blue;
         }
     h2 {
-        color:burlywood;
+        color:maroon;
     }
     blockquote { 
         background-color: lightgray;
@@ -35,9 +35,9 @@
 
 <body>
     <header>
-    <img class = "side" src = "dig-dug.svg" alt = "dig dug logo" width = "178" height="54">
+    <img class = "side" src = "images/dig-dug.svg" alt = "dig dug logo" width = "178" height="54">
     <h1>Dig Dug</h1>
-    <img src = "dig-dug-burnt.png" alt = "dig dug example photo">
+    <img src = "images/dig-dug-burnt.png" alt = "dig dug example photo">
     <hr>
 </header>
 <main>
@@ -58,7 +58,7 @@ earth. Stopping you from doing this are two monsters, called <em>Pooka</em> and 
  you around. The only weapon that you carry is an air pump, which you can use to inflate the monsters to <br>
 the point where they <strong>explode</strong>. [...]
 </p>
-<img src = "fygar_inflate.png" alt = "fygar being inflated">
+<img src = "images/fygar_inflate.png" alt = "fygar being inflated">
 
 <hr>
 
