--- a/game/index.html
+++ b/game/index.html
@@ -8,19 +8,22 @@
 
 <style>
     h1 { 
-        color:red;
+        color: #DD6031;
         font-family: sans-serif;
-        border-bottom: 1px solid blue;
+        border-bottom: 1px solid #DD6031;
         }
     h2 {
-        color:maroon;
+        color: #DD6031;
     }
     blockquote { 
-        background-color: lightgray;
+        background-color: #EABE7C;
         padding: 1rem;
         }
     body {
-        background-color: lightblue;
+        background-color: #ECE4b7;
+    }
+    footer {
+        background-color: #D9DD92;
     }
     p {
         margin-left: 100px;
@@ -28,6 +31,9 @@
     img.side {
         float:right;
         margin: 0 12px;
+    }
+    a {
+        color: #311E10;
     }
     
 </style>
@@ -57,6 +63,7 @@ Dig Dug is a 1-2 player arcade game in which you have to use your shovel to dig 
 earth. Stopping you from doing this are two monsters, called <em>Pooka</em> and <em>Fygar</em>, who will continually chase <br>
  you around. The only weapon that you carry is an air pump, which you can use to inflate the monsters to <br>
 the point where they <strong>explode</strong>. [...]
+<a>See another page here</a>
 </p>
 <img src = "images/fygar_inflate.png" alt = "fygar being inflated">
 
