creation of 235 page

--- a/basic_game_page_hw/index.html
+++ b/basic_game_page_hw/index.html
@@ -23,7 +23,7 @@
 <body style="background-color:black;">
     <header>
     <h1>Cult of the Lamb</h1>
-    <img src = "cover-img.webp" alt = "cult of the lamb example photo">
+    <img src = "cover-img.webp" alt = "cult of the lamb example photo" width = "30%" >
     <hr>
 </header>
 <main>
@@ -34,7 +34,7 @@
 <li>Developed by: Massive Monster Studios<br></li>
 <li>Released: Apr, 1982<br></li>
 </ul>
-<img src = "gameplay2-img.webp" alt = "gameplay of boss fight">
+<img src = "gameplay2-img.webp" alt = "gameplay of boss fight" width = "30%">
 <hr>
 
 <h2>Description</h2>
@@ -44,7 +44,7 @@
     prophets, venturing out into diverse and mysterious regions to build a loyal community of woodland worshippers<br>
     and spread your Word to become the one true cult.
 </p>
-<img src = "gameplay-img.webp" alt = "gameplay image">
+<img src = "gameplay-img.webp" alt = "gameplay image" width = "30%">
 
 <hr>
 
