wrapping up 235 page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Flynn Lundeen's 235 Page</h1>
 
     <hr>
-    <img src = "Flynn_Lundeen.JPG" alt = "Photo of Flynn" width = 10% height = 10%>
+    <img id ="headshot" src = "Flynn_Lundeen.JPG" alt = "Photo of Flynn" width = 457 height = 572>
     <h2>About Me</h2>
-    <p>
+    <p id = "bio">
         My name is Flynn Lundeen. I am from Reno, NV where I have previously lived for 17 years of my life.
         I am on the varsity swim team here at rit where I compete as a distance swimmer. Some of my other interests 
         include skiing, along with video games. My goal is to design games at my own studio. What I hope to
@@ -25,14 +25,17 @@
     <h2>
         Project Links
     </h2>
-        <a href = "">Project 1</a> <br>
-        <a href = "">Project 2</a> <br>
-        <a href = "">Project 3</a> <br>
+        <a class ="projLink" href = "">Project 1</a> <br>
+        <a class ="projLink" href = "">Project 2</a> <br>
+        <a class ="projLink" href = "">Project 3</a> <br>
 
     <hr>
 
     <h4>
         <a href = "https://github.com/flundeen/IGME-235">Github Repo Link</a>
     </h4>
+    <hr>
+
 </body>
+
 </html>
