--- a/game/pic1.html
+++ b/game/pic1.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="images/dig-dug-altpage.jfif" alt = "large dig dug image">
-    <a>Click to go back</a>
+    <a href="index.html">Click to go back</a>
 </body>
 </html>
