--- a/game/index.html
+++ b/game/index.html
@@ -5,8 +5,10 @@
 
 <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+<link rel="font" type="font/ttf" href="BungeeSpice-Regular.ttf"/>
 
 <style>
+
     h1 { 
         color: #DD6031;
         font-family: sans-serif;
@@ -20,10 +22,16 @@
         padding: 1rem;
         }
     body {
+        background-color: #311E10;
+        font-family: arial, sans-serif;
+    }
+    header {
+        margin: 0 auto;
         background-color: #ECE4b7;
     }
     footer {
-        background-color: #D9DD92;
+        margin: 0 auto;
+        background-color: #ECE4b7;
     }
     p {
         margin-left: 100px;
@@ -35,6 +43,12 @@
     a {
         color: #311E10;
     }
+    main{
+        margin: 0 auto;
+        border: 1px solid black;
+        background-color: #ECE4b7;
+    }
+    
     
 </style>
     </head>
@@ -63,7 +77,7 @@ Dig Dug is a 1-2 player arcade game in which you have to use your shovel to dig 
 earth. Stopping you from doing this are two monsters, called <em>Pooka</em> and <em>Fygar</em>, who will continually chase <br>
  you around. The only weapon that you carry is an air pump, which you can use to inflate the monsters to <br>
 the point where they <strong>explode</strong>. [...]
-<a>See another page here</a>
+<a href="pic1.html">See another page here</a>
 </p>
 <img src = "images/fygar_inflate.png" alt = "fygar being inflated">
 
