--- a/project1/index.html
+++ b/project1/index.html
@@ -79,15 +79,20 @@
         </section>
 
         <section id="bigm">
-        <p><div id="them">M</div> Lorem ipsum dolor sit amet, consectetur 
-            adipiscing elit, sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure dolor 
-            in reprehenderit in voluptate velit esse cillum dolore 
-            eu fugiat nulla pariatur. Excepteur sint occaecat 
-            cupidatat non proident, sunt in culpa qui officia 
-            deserunt mollit anim id est laborum.</p>
+        <p>
+            <div id="them">S</div>wimming is broken up into four main strokes.
+            With the strokes being broken up into 2 different categories. These categories
+            are long-axis and short-axis strokes, are a called so based on the 
+            rythm of the body and rotation of the shoulders. In the long-axis strokes 
+            the arms spin on after another streching our the body with a typical 
+            kick tempo of 6 kicks for every cycle (equivalent of two strokes). 
+            The long-axis strokes are freestyle and backstroke, and the movements 
+            between the two are fairly similar aside from the fact that you face the floor 
+            in freestyle and the sky in backstroke. Freestyle is the most frequent 
+            of all of the strokes as the freestyle event distances range from 50y to 
+            1650y. The other category of strokes is short-axis strokes. This category 
+            includes 
+        </p>
         </section>
         
         <section id="bigm2">
