--- a/project1/index.html
+++ b/project1/index.html
@@ -91,21 +91,27 @@
             in freestyle and the sky in backstroke. Freestyle is the most frequent 
             of all of the strokes as the freestyle event distances range from 50y to 
             1650y. The other category of strokes is short-axis strokes. This category 
-            includes 
+            includes butterfly and breaststroke. Butterfly is the most challenging of all 
+            of the strokes however it can reach the highest top speed. In this strokes the 
+            body must stay symmetrical in movements as both arms must leave and enter the 
+            water at the same time while keeping the legs together in a dolphin kick. Breaststroke
+            somewhat mimics the way that frogs swims and is the most unique of the rest of the strokes. 
+            The interesting thing about short-axis strokes though is that they both originally stemmed 
+            from the same stroke and over time diverged into dissimilar ways to swim. 
+
         </p>
         </section>
         
         <section id="bigm2">
-            <p><div id="them">M</div> Lorem ipsum dolor sit amet, consectetur 
-                adipiscing elit, sed do eiusmod tempor incididunt ut 
-                labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                quis nostrud exercitation ullamco laboris nisi ut 
-                aliquip ex ea commodo consequat. Duis aute irure dolor 
-                in reprehenderit in voluptate velit esse cillum dolore 
-                eu fugiat nulla pariatur. Excepteur sint occaecat 
-                cupidatat non proident, sunt in culpa qui officia 
-                deserunt mollit anim id est laborum.</p>
-            </section>
+            When it comes to races, aside from freestyle, each stroke has a 100y and 200y distance 
+            race. Along with these races, there are relays in which teams of four can either swim 
+            freestyle or have each individual on the team race a different stroke which creates a medley 
+            relay. The medley is another event within the swim community for which an individual 
+            can race; however, it is called an "individual medley" or "IM" for short. The IM comes in 
+            two different distances: the 200y and 400y IM. The order in which the strokes are swam 
+            are butterfly, backstroke, breaststroke, and freestyle, and are evenly distributed throughout 
+            the race distance.
+        </section>
     </main>
 
 
