--- a/project1/index.html
+++ b/project1/index.html
@@ -66,15 +66,14 @@
         </h6>
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur 
-            adipiscing elit, sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure dolor 
-            in reprehenderit in voluptate velit esse cillum dolore 
-            eu fugiat nulla pariatur. Excepteur sint occaecat 
-            cupidatat non proident, sunt in culpa qui officia 
-            deserunt mollit anim id est laborum.
+            When it comes to races, aside from freestyle, each stroke has a 100y and 200y distance 
+            race. Along with these races, there are relays in which teams of four can either swim 
+            freestyle or have each individual on the team race a different stroke which creates a medley 
+            relay. The medley is another event within the swim community for which an individual 
+            can race; however, it is called an "individual medley" or "IM" for short. The IM comes in 
+            two different distances: the 200y and 400y IM. The order in which the strokes are swam 
+            are butterfly, backstroke, breaststroke, and freestyle, and are evenly distributed throughout 
+            the race distance.
         </p>
         </section>
 
