--- a/project1/doc.html
+++ b/project1/doc.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src = "Stuff.pdf" alt = "sketch of website plans">
+    <img src = "media/plans.png" alt = "sketch of website plans">
 </body>
 </html>
