--- a/project1/index.html
+++ b/project1/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1><div id="Market">Swimming</div> <div id="and">&</div> <br><div id = "Money">Dive</div></h1>
+        <h1><span id="market">Swimming</span><br><span id="and">&</span><br><span id="money">Dive</span></h1>
         <p>Swimming has been around for a very long time, being taught in the Greek 
             and Roman Empire. According to Britannica it was taught in martial training
             and treated with equal importance to the alphabet in elementary schools.
@@ -21,16 +21,15 @@
             boards. It wasn't until 1846 that the first swim championship was held in
             Australia. Swimming came to the United States in 1888 when the Amatuer 
             Athletic Union (AAU) officially recognized swimming as a sport.
-            <source>https://www.britannica.com/sports/swimming-sport</p>source>
+            <a href="https://www.britannica.com/sports/swimming-sport">https://www.britannica.com/sports/swimming-sport</a>
         </p>
     </header>
 
-    <img id = "swimmer" src =proj1_swimphoto1.jpg alt= "underwater view of swimmer" width = 60% height = 50%>
-
-
     <main>
+        <img id="swimmer" src="media/proj1_swimphoto1.jpg" alt="underwater view of swimmer" width="690" height="400">
+
         <section id="retire">
-        <h3>Doyou <br>know <div id="p2">How To <br>Turn?</div></h3>
+        <h3>Doyou <br>know <span id="p2"><br>How To <br>Turn?</span></h3>
         <p>
             Turns or "walls" are one of the most crucial aspects of competitive swimming 
             and can win or lose a race. Coming into the wall, a swimmer must 
@@ -52,7 +51,7 @@
         </section>
 
         <section id="bluebox">
-        <img src = "wave.png" alt = "wave icon">
+        <img src = "media/wave.png" alt = "wave icon">
 
         <h2>RIT <br>Aquatics</h2>
         <h6>
@@ -66,21 +65,19 @@
         </h6>
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur 
-            adipiscing elit, sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut 
-            aliquip ex ea commodo consequat. Duis aute irure dolor 
-            in reprehenderit in voluptate velit esse cillum dolore 
-            eu fugiat nulla pariatur. Excepteur sint occaecat 
-            cupidatat non proident, sunt in culpa qui officia 
-            deserunt mollit anim id est laborum.
+            The RIT swim and dive team over the past few years has 
+            been gaining more and more notoriety in division 3
+            athletics. Under Head Coach, Phil Baretela, who has been 
+            head coach for now five seasons. Leading the men's team 
+            to their first liberty league title last year and having
+            the women's place second. With impressive dual meet records
+            also for the men (6-1) and women (6-2) for last season.
         </p>
         </section>
 
         <section id="bigm">
         <p>
-            <div id="them">S</div>wimming is broken up into four main strokes.
+            <span id="them">S</span>wimming is broken up into four main strokes.
             With the strokes being broken up into 2 different categories. These categories
             are long-axis and short-axis strokes, are a called so based on the 
             rythm of the body and rotation of the shoulders. In the long-axis strokes 
@@ -98,12 +95,11 @@
             somewhat mimics the way that frogs swims and is the most unique of the rest of the strokes. 
             The interesting thing about short-axis strokes though is that they both originally stemmed 
             from the same stroke and over time diverged into dissimilar ways to swim. 
-
         </p>
         </section>
         
         <section id="bigm2">
-            When it comes to races, aside from freestyle, each stroke has a 100y and 200y distance 
+            <br>When it comes to races, aside from freestyle, each stroke has a 100y and 200y distance 
             race. Along with these races, there are relays in which teams of four can either swim 
             freestyle or have each individual on the team race a different stroke which creates a medley 
             relay. The medley is another event within the swim community for which an individual 
