--- a/gif-finder/gif-finder.html
+++ b/gif-finder/gif-finder.html
@@ -3,221 +3,8 @@
 <head>
 	<meta charset="utf-8" />
  	<title>Giphy Finder</title>
- 	<style>
-		*{
-			font-family:verdana,tahoma,sans-serif;
-		}
-	
- 		header{
- 			background: url(images/cats.jpg);
- 			height:195px;
- 		}
- 		
- 		header h1{
- 			margin:0;
- 			color:blue;
- 			text-align:center;
- 			font-size:100px;
- 			padding-top: 35px;
- 		}
- 		
- 		#status{
- 			font-style: italic;
- 			height:32px;
- 		}
- 		
- 		.result {
-			position: relative;
-			height: 175px;
-			width: 100px;
-			float:left;
-			border:1px solid gray;
-			padding:5px;
-			margin-left:10px;
-			margin-bottom:10px;
-		}
-
-		.result img {
-			position: absolute;
-			left: 5px;
-			bottom: 5px;
-			display:block;
-			
-		}
-		
-		.result span{
-			font-size:12px;
-			font-weight:bold;
-			display:block;
-		}
-		
-		.result audio{
-			width: 130px;
-		}
-		
-		button{
-		  display : inline-block;
-		  cursor : pointer;
-  
-		  border-style : solid;
-		  border-width : 1px;
-		  border-radius : 50px;
-		  padding : 10px 18px;
-		  box-shadow : 0 1px 4px rgba(0,0,0,.6);
-		  font-size : 9.5pt;
-		  font-weight : bold;
-		  color : #fff;
-		  text-shadow : 0 1px 3px rgba(0,0,0,.4);
-		  font-family : sans-serif;
-		  text-decoration : none;
-		}
-		
-		button.green{
-			border-color: #8fc800;
-	  		background: #8fc800;
-	  		background: linear-gradient(top, #8fc800 0%,#438c00 100%);
-		}
-		
-		button:hover{
-			background: #8fDD00;
-		}
-		
-		button:active{
-			background: #8fFF00;
-			box-shadow : 0 0 6px rgba(0,0,0,.6);
-		}
-		
-		button:focus {outline:0;}
-		
-		.widgets{
-			margin-top: 1em;
-			margin-bottom:1em;
-		}
-		
- 	</style>
-
-  <script>
-    // 1
-  	window.onload = (e) => {document.querySelector("#search").onclick = searchButtonClicked};
-	
-	// 2
-	let displayTerm = "";
-	
-	// 3
-	function searchButtonClicked(){
-		console.log("searchButtonClicked() called");
-
-        //1
-        const GIPHY_URL = "https://api.giphy.com/v1/gifs/search?";
-        
-        //2
-        let GIPHY_KEY = "5PuWjWVnwpHUQPZK866vd7wQ2qeCeqg7";
-
-        //3
-        let url = GIPHY_URL;
-        url += "api_key=" + GIPHY_KEY;
-
-        //4
-        let term = document.querySelector("#searchterm").value;
-        displayTerm = term;
-
-        //5
-        term = term.trim();
-
-        //6
-        term = encodeURIComponent(term);
-
-        //7
-        if(term.length < 1) return;
-
-        //8
-        url += "&q=" + term;
-
-        //9
-        let limit = document.querySelector("#limit").value;
-        url += "&limit=" + limit;
-
-        //10
-        document.querySelector("#status").innerHTML = "<b>Searching for '" + displayTerm + "'</b>";
-
-        //11
-        console.log(url);
-
-        // 12 Request data!
-        getData(url);
-
-		
-	}
-
-    function getData(url){
-        //1 - create a new XHR object
-        let xhr = new XMLHttpRequest();
-
-        //2 - set the onload handler
-        xhr.onload = dataLoaded;
-
-        //3 - set the onerror
-        xhr.onerror = dataError;
-
-        //4 - open connection and send the request
-        xhr.open("GET", url);
-        xhr.send();
-    }
-
-    function dataLoaded(e){
-        //5 - event.target is the xhr object
-        let xhr = e.target;
-
-        //6 - xhr.responseText is the JSON file we just downloaded
-        console.log(xhr.response);
-
-        //7
-        let obj = JSON.parse(xhr.responseText);
-
-        //8 - if there are no results, print a message and return
-        if(!obj.data || obj.data.length == 0){
-            document.querySelector("#status").innerHTML = "<b>No Results found for '" + displayTerm + "'</b>";
-            return;
-        }
-
-        //9 - Start building an html string we will display to the user
-        let results = obj.data;
-        console.log("results.length = " + results.length);
-        let bigString = "<p><i>Here are " + results.length + "results for '" + displayTerm + "'</i></p>";
-
-        //10 - loop through the array of results
-        for(let i = 0; i < results.length; i++){
-            let result = results[i];
-
-            //11 - get the url to the GIF
-            let smallURL = result.images.fixed_width_small.url;
-            if(!smallURL) smallURL = "images/no-image-found.png";
-
-            //12 - get the url to the GIPHY page
-            let url = result.url;
-
-            //13 - Build a <div> to hold each result
-                // ES6 String Template
-                let line = "<div class= 'result'><img src= '${smallURL}' title= '${result.id}' />";
-                line += "<span><a target= '_blank' href= '${url}'>View on Giphy</a></span></div>";
-
-            //15 = add the <div> to 'bigString' and loop
-            bigString += line;
-        }
-
-        //16 - all done building the htm - show it to the user
-        document.querySelector("#content").innerHTML = bigString;
-
-        //17 - update the status
-        document.querySelector("#status").innerHTML = "<b>Success!</b>";
-    }
-
-    function dataError(e){
-        console.log("An error occured");
-    }
-
-	
-  </script>
+	<link rel="stylesheet" href="styles/main.css">
+	<script src="js/main.js"></script>
 
   
 </head>
