--- a/gallery-start/gallery.html
+++ b/gallery-start/gallery.html
@@ -68,17 +68,17 @@
   <section id="main">
       <h1>Snapshots</h1>
       <ul>
-        <li><span data-image="cassie.jpg" title="A fireworks display">Cassie</span></li>
-        <li><span data-image="seal.jpg" title="A cup of black coffee">Seal</span></li>
-        <li><span data-image="wolf.jpg" title="A red, red rose">Wolf</span></li>
-        <li><span data-image="eagle.jpg" title="The famous clock">Eagle</span></li>
+        <li><span data-image="images/cassie.jpg" title="A fireworks display">Cassie</span></li>
+        <li><span data-image="images/seal.jpg" title="A cup of black coffee">Seal</span></li>
+        <li><span data-image="images/wolf.jpg" title="A red, red rose">Wolf</span></li>
+        <li><span data-image="images/eagle.jpg" title="The famous clock">Eagle</span></li>
       </ul>
       <div id="imagewrapper">
         <img id="placeholder" src="images/placeholder.gif" alt="my image gallery" />
       </div>
        <p id="description">Choose an image.</p>
      <footer>
-        <p>For IGME-230 Web Site Design & Implementation</p>
+        <p>For IGME-235 Web Site Design & Implementation</p>
      </footer>
     </section>
      <script>
@@ -87,6 +87,27 @@
 	span. In JavaScript we access these custom data properties using the .dataset 
 	property. We also covered this in web-apps-6.
 	*/
+	let selectedimg = document.querySelector("img");
+	let buttons = document.querySelectorAll("span");
+	
+	selectedimg.dataset.image = selectedimg.src;
+	buttons[0].dataset.image = "images/cassie.jpg";
+	buttons[1].dataset.image = "images/seal.jpg";
+	buttons[2].dataset.image = "images/wolf.jpg";
+	buttons[3].dataset.image = "images/eagle.jpg";
+
+	function updateImage(){
+		console.log(selectedimg.dataset.image);
+		selectedimg.dataset.image = this.dataset.image;
+		console.log(selectedimg.dataset.image);
+		selectedimg.src = selectedimg.dataset.image;
+	}
+
+	buttons[0].onclick = updateImage;
+	buttons[1].onclick = updateImage;
+	buttons[2].onclick = updateImage;
+	buttons[3].onclick = updateImage;
+
 	</script>
 	   
 </body>
