--- a/project_2/project_2.html
+++ b/project_2/project_2.html
@@ -32,9 +32,7 @@
     <div id="result">
         <h3>Here is what you asked for</h3>
         Looks like your stuck with...
-        <ul id="crewresult">
-            
-        </ul>
+        <div id="crewresult"></div>
         And will be portaling with them to
         <div id="locresult"></div>
         where you will experience something similar to what Rick and Morty did in 
