work on proposal

--- a/project3/plans.html
+++ b/project3/plans.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <p>
-        Concept is a chess survival type game with the introduction of a few new pieces as well. 
-        There will be a variety of chess boards to select from as well. <br>
+        Chess Defenders
+        Concept: is a chess survival type game with the introduction of a few new pieces as well. 
+        There will be a variety of chess boards to select from as well. The player will have to 
+        defend against mulptiple waves of chess pieces and be rewarded with pieces after completing
+        each wave. 
+        Genre: survival
+        Story: Your kingdom is under siege so you must utilize your weapons you have to deter your attackers
+        Aesthetics: The graphics would be kind of a rugged cartoon design. The pieces would be fairly simple 
+        but there will still be a little bit of detail.
+        Gameplay: The gameplay will be turned based in which the player will move a piece and then the attackers 
+        will respond
+        About: My name is Flynn Lundeen, I am a scond year majoring in game design,
+        I plan to use PixiJS <br>
         <img src="proj3plans1.png" alt="sketch 1" width=60% height = auto>
         <img src="proj3plans2.png" alt="sketch 2" width=60% height = auto>
         <img src="proj3plans3.png" alt="sketch 3" width=60% height = auto>
