--- a/project3/main.html
+++ b/project3/main.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://pixijs.download/release/pixi.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/classes.js"></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     
