big catch up between on campus and home

--- a/project_2/doc.html
+++ b/project_2/doc.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <b>Process & Planning</b>
     <p>
        For my process I started by looking through all of the provided urls on the github doc. With Rick and Morty currently 
         releasing weekly episodes, I felt inspired to lean more towards the Rick and Morty API. I then justy had to brainstorm 
@@ -22,6 +23,10 @@
         of trying to pull the entire character info list which in the end just added efficiency for my code. I am very happy 
         that I was able to get that bug sorted out and improve upon my prototype based on my feed back.
     </p>
+
+    <b>Sources</b><br>
+    <a href="https://fonts.google.com/specimen/Chewy?query=chewy">Source link for font</a> <br><br>
+    <a href="https://rickandmortyapi.com/documentation/ ">Source link for API</a>
 
 </body>
 </html>
