--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Project Links
     </h2>
         <a class ="projLink" href = "https://people.rit.edu/fsl8307/235/project1/">Project 1</a> <br>
-        <a class ="projLink" href = "">Project 2</a> <br>
+        <a class ="projLink" href = "https://people.rit.edu/fsl8307/235/project_2/project_2.html">Project 2</a> <br>
         <a class ="projLink" href = "">Project 3</a> <br>
 
     <hr>
