--- a/project3/main.html
+++ b/project3/main.html
@@ -5,12 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://pixijs.download/release/pixi.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/classes.js"></script>
+
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
+    <label for="boards"> Pick your Board:</label>
+    <select name="boards" id="boards">
+        <option value="classic">Classic</option>
+        <option value="small">Small (not implemented)</option>
+        <option value="long">Long (not implemented)</option>
+    </select>
+    <br>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+
+    <script src="js/main.js"></script>
+    <script src="js/classes.js"></script>
+    <!-- <script src="js/utilities.js"></script> -->
+
+    
+
     
 </body>
 </html>
