--- a/project3/plans.html
+++ b/project3/plans.html
@@ -21,6 +21,12 @@
         will respond
         About: My name is Flynn Lundeen, I am a scond year majoring in game design,
         I plan to use PixiJS <br>
+
+        Throughout the process of developing this I hit many walls in when trying to set the baseline of all my 
+        needed methods and data trackers. I referred a lot to the javascript docs provided for us in class so that
+        I could debug a lot of my difficulties and was able to come out with something that yurned out quite well.
+
+        Unfortunately due to time cruch I was not able
         <img src="proj3plans1.png" alt="sketch 1" width=60% height = auto>
         <img src="proj3plans2.png" alt="sketch 2" width=60% height = auto>
         <img src="proj3plans3.png" alt="sketch 3" width=60% height = auto>
