--- a/project3/main.html
+++ b/project3/main.html
@@ -13,8 +13,8 @@
     <label for="boards"> Pick your Board:</label>
     <select name="boards" id="boards">
         <option value="classic">Classic</option>
-        <option value="small">Small (not implemented)</option>
-        <option value="long">Long (not implemented)</option>
+        <option value="small">Small</option>
+        <option value="demo">Demo</option>
     </select>
     <br>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
